syntax = "proto3";
option csharp_namespace = "Phorkus.Network.Grpc";

message ThresholdMessage {
    bytes message = 1;
}

service ThresholdService {
    rpc ExchangeMessage (ThresholdMessage) returns (ThresholdMessage);
}